<?xml version="1.0" encoding="utf-8"?>
<!-- 全键盘-26-字母 -->
<Keyboard
    bg_res="@drawable/main_bg"
    key_bg_res="@drawable/key_bg_rectangle"
    key_height="@dimen/px100"
    key_left_padding="@dimen/px10"
    key_press_res="@drawable/softkey_bg_press2"
    key_select_res="@drawable/softkey_bg_select2"
    key_text_color="#b8bbbf"
    key_text_size="@dimen/px60"
    key_top_padding="@dimen/px10"
    key_width="@dimen/px100"
    left_right_move="true"
    qwerty="true"
    qwerty_uppercase="false"
    start_pos_x="@dimen/px240"
    start_pos_y="@dimen/px20"
    top_bottom_move="true" >

    <!-- 第一行 -->
    <row>

        <!-- 状态按钮测试 -->
        <toggle_key key_code="@string/toggle_keycode_case" >
            <state
                key_icon="@drawable/daxie"
                key_label="大写"
                state_id="@string/toggle_en_upper" />
            <state
                key_icon="@drawable/xiaoxie"
                key_label="小写"
                state_id="@string/toggle_en_lower" />
        </toggle_key>

        <keys
            codes="45|51|33|46|48|53|49|37|43|44"
            labels="Q|W|E|R|T|Y|U|I|O|P"
            splitter="|" />
        <!-- 删除 -->
        <key
            key_code="@string/keycode_del"
            key_icon="@drawable/delete" />
        <!-- 返回-退出输入法 -->
        <key
            key_code="@string/keycode_back"
            key_icon="@drawable/quit_skb" />
    </row>

    <!-- 第二行 -->
    <row>

        <!-- 切换到数字键盘 -->
        <key
            key_code="@string/mode_skb_all_number"
            key_label="123_!"
            key_text_size="@dimen/px30" />

        <keys
            codes="29|47|32|34|35|36|38|39|40"
            labels="A|S|D|F|G|H|J|K|L"
            splitter="|" />

        <key
            key_icon="@drawable/dou_hao_e"
            key_label="," />
        <key
            key_icon="@drawable/ju_hao_e"
            key_label="." />
        <!-- 回车 -->
        <key
            key_code="@string/keycode_center"
            key_icon="@drawable/g_search_icon"
            key_height="@dimen/px210"
            key_text_size="@dimen/px30" />
    </row>

    <!-- 第三行 -->
    <row
        key_bottom_padding="@dimen/px30"
        start_pos_x="@dimen/px350" >
        <keys
            codes="54|52|31|50"
            labels="Z|X|C|V"
            splitter="|" />
        <!-- 空格 -->
        <key
            key_code="@string/keycode_space"
            key_icon="@drawable/kongge"
            key_width="@dimen/px210" />

        <keys
            codes="30|42|41"
            labels="B|N|M"
            splitter="|" />
        
        <key
            key_code="@string/keycode_left"
            key_icon="@drawable/key_move_left"/>
         <key
             key_icon="@drawable/key_move_right"
             key_code="@string/keycode_right"/>
    </row>

</Keyboard>